cabal-version:       2.0

name:                discourse-tui

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.4.1.0

synopsis:            A terminal user interface for discourse

license:             BSD3
license-file:        LICENSE

author:              Jack Wines
maintainer:          dburke.gw@gmail.com

build-type:          Simple

extra-source-files:  CHANGELOG.md


executable discourse-tui
  main-is:             Main.hs

  -- Looks like we need to wait a while to use PackageInfo rather than
  -- Paths - the documentation does not make it clear what versions are
  -- needed.
  --
  other-modules:       Paths_discourse_tui
                       -- PackageInfo_discourse_tui
                       Types

  -- autogen-modules:     PackageInfo_discourse_tui
  autogen-modules:     Paths_discourse_tui

  build-depends:       base,
                       brick >= 1.0 && < 2.1,
                       cursor,
                       aeson,
                       http-conduit,
                       vty,
                       containers,
                       vector,
                       pandoc,
                       text,
                       lens,
                       directory >= 1.2.3,
                       bytestring >= 0.10 && < 0.13,
                       formatting >= 7.1 && < 7.3,
                       process == 1.6.*,
                       time >= 1.9 && < 1.13

  hs-source-dirs:      src

  default-language:    Haskell2010
  ghc-options: -Wall -threaded

