cabal-version:       2.0

name:                discourse-tui

version:             0.7.0.0

synopsis:            A terminal user interface for discourse

license:             BSD3
license-file:        LICENSE

author:              Jack Wines
maintainer:          dburke.gw@gmail.com

build-type:          Simple


executable discourse-tui
  main-is:             Main.hs

  -- Looks like we need to wait a while to use PackageInfo rather than
  -- Paths - the documentation does not make it clear what versions are
  -- needed.
  --
  other-modules:       Paths_discourse_tui
                       -- PackageInfo_discourse_tui
                       Types

  -- autogen-modules:     PackageInfo_discourse_tui
  autogen-modules:     Paths_discourse_tui

  build-depends:       base,
                       brick >= 1.9 && < 2.8,
                       aeson,
                       http-conduit,
                       vty,
                       vty-unix == 0.2.*,
                       containers,
                       vector,
                       pandoc,
                       text,
                       lens,
                       directory >= 1.2.3 && < 1.4,
                       bytestring >= 0.10 && < 0.13,
                       formatting >= 7.1 && < 7.3,
                       process == 1.6.*,
                       time >= 1.9 && < 1.15

  hs-source-dirs:      src

  default-language:    Haskell2010
  ghc-options: -Wall -threaded

